--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -5,7 +5,7 @@
 ## No file there, just an epitech header example
 ##
 
-SRC	=	$(shell find *.c)	\
+SRC	=	$(wildcard find *.c)
 
 OBJ	=	$(SRC:.c=.o)
 
@@ -15,17 +15,15 @@ all:	$(NAME)
 
 $(NAME):	$(OBJ)
 	ar -rc -o $(NAME) $(OBJ)
-	cp my.h ../../../include/
-	cp libmy.a ../..
-	
+	cp $(NAME) ../
+
 clean:
 	rm -f $(OBJ)
 
 fclean: clean
 	rm -f $(NAME)
-	rm -f ../../../include/my.h
-	rm -f ../../libmy.a
+	rm -f ../$(NAME)
 
 re:	fclean all
 
-.PHONY : re clean fclean
+.PHONY : re clean fclean all
